# MapReduce-with-Docker

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yaml  run.sh  test.txt
data/: bigtext.txt  books.txt  mapreduce_sparse_matrix.txt  simple_dense.txt  single_simple.txt  singlenode_sparse_matrix.txt  test.txt
manager/: Cargo.toml
manager/src/: broker.rs  job_manager.rs  lib.rs  main.rs  manager.rs  messages.rs
singlenode/: Cargo.toml  docker-compose.yaml
singlenode/src/: main.rs
src/: ip_finder.rs  main.rs  mapreduce.rs
src/master/: ip_finder.rs  manger_controller.rs  master.rs  mod.rs
src/slave/: hasher.rs  map.rs  mod.rs  reduce.rs  shuffle.rs  slave.rs
src/worker/: hasher.rs  map.rs  mod.rs  reduce.rs  shuffle.rs  worker.rs
